--- a/Документация/Содержание.md
+++ b/Документация/Содержание.md
@@ -11,7 +11,7 @@
  
 # 2. Hello World !!!
 2.1. Компиляция с помощью библиотеки NCURSES  
-2.2. Диссекция  
+2.2. Рассечение  
 
 # 3. Неприятные подробности
 
