Update Несколько слов о окнах.md

--- a/Документация/Несколько слов о окнах.md
+++ b/Документация/Несколько слов о окнах.md
@@ -1,3 +1,4 @@
+# 5. Несколько слов о окнах
 Прежде чем мы погрузимся в бесчисленные функции ncurses, позвольте мне прояснить
 несколько моментов, касающихся окон. Окна подробно описаны в следующих разделах.  
 
