--- a/Документация/Содержание.md
+++ b/Документация/Содержание.md
@@ -24,7 +24,7 @@
 4.6. Различные функции инициализации  
 4.7. Пример  
 
-# 5. Несколько слов о Windows
+# 5. Несколько слов о окнах
 
 # 6. Функции вывода  
 6.1. класс функций addch()  
