--- a/Документация/Несколько слов о окнах.md
+++ b/Документация/Несколько слов о окнах.md
@@ -4,7 +4,7 @@
 
 **Окно** - это воображаемый экран, определяемый системой curses. Окно не означает
 окно с рамкой, которое вы обычно видите на платформах `Win9X`. Когда `curses`
-инициализируется, он создает окно по умолчанию с именем stdscr, которое
+инициализируется, он создает окно по умолчанию с именем `stdscr`, которое
 представляет ваш экран `80x25` (или размер окна, в котором вы работаете). Если вы
 выполняете простые задачи, такие как печать нескольких строк, чтение ввода и т.д., вы
 можете спокойно использовать это единственное окно для всех ваших целей. Вы также
